@@ -1,3 +1,8 @@
+Sat Jan 12 2002  Vitezslav Samel <samel@mail.cz>
+	* help.c, types.h:
+	get back context help (vanished in cleaning patch to help by marx_sk)
+	(context help is now only used in search prompt window)
+
 Tue Jan  8 2002  Vitezslav Samel <samel@mail.cz>
 	* vs.c, vs.h:
 	change sELEMENT #define to typedef
